using readme rmd and adding badges

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(
 [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.8075586.svg)](https://doi.org/10.5281/zenodo.8075586)
 [![R-CMD-check](https://github.com/W-Mohammed/sickSickerMicrosimPack/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/W-Mohammed/sickSickerMicrosimPack/actions/workflows/R-CMD-check.yaml)
 [![Codecov test coverage](https://codecov.io/gh/W-Mohammed/sickSickerMicrosimPack/graph/badge.svg)](https://app.codecov.io/gh/W-Mohammed/sickSickerMicrosimPack)
+[![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable)
 <!-- badges: end -->
 
 `sickSickerMicrosimPack` provides a set of functions to build and run a
